--- a/Javascript Basic/style.css
+++ b/Javascript Basic/style.css
@@ -1,5 +1,12 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+} */
+
+.blue{
+    background-color: #367fee;
+}
+.pink{
+    background-color: #ff6e6e;
 }
